--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -258,10 +258,15 @@ jobs:
           tools: phpunit:8.5.2
           coverage: none
 
+      - name: Set up PHPUnit
+        working-directory: apps/${{ env.APP_NAME }}
+        run: composer i
+
       - name: Set up Nextcloud
         run: |
           mkdir data
           ./occ maintenance:install --verbose --database=oci --database-name=XE --database-host=127.0.0.1 --database-port=1521 --database-user=autotest --database-pass=owncloud --admin-user admin --admin-pass admin
+          php -f index.php
           ./occ app:enable --force ${{ env.APP_NAME }}
           php -S localhost:8080 &
 
