--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,12 @@
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
-        "christophwurst/nextcloud": "^17",
-        "jakub-onderka/php-parallel-lint": "^1.0.0",
+        "christophwurst/nextcloud": "^20",
         "phpunit/phpunit": "^8",
         "nextcloud/coding-standard": "^0.4.0",
         "symfony/event-dispatcher": "^4.0",
-        "vimeo/psalm": "^4.3"
+        "vimeo/psalm": "^4.3",
+        "php-parallel-lint/php-parallel-lint": "^1.2"
     },
     "config": {
         "optimize-autoloader": true,
