--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "nextcloud/deck",
     "type": "project",
     "license": "AGPLv3",
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Julius Härtl",
@@ -13,7 +14,7 @@
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
-        "christophwurst/nextcloud": "^20",
+        "christophwurst/nextcloud": "dev-master",
         "phpunit/phpunit": "^8",
         "nextcloud/coding-standard": "^0.4.0",
         "symfony/event-dispatcher": "^4.0",
