Test run relativeci
Signed-off-by: Julius Härtl <jus@bitgrid.net>

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,5 +22,8 @@ jobs:
         npm ci
     - name: build
       run: |
-        npm run build --if-present
+        mkdir -p js
+        npm run build --if-present -- --profile --json | tail -n +6 > js/webpack-stats.json
+        npx relative-ci-agent
+
 
