Fix test mocking
Signed-off-by: Julius Härtl <jus@bitgrid.net>

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -13,6 +13,7 @@ $config
 	->notPath('build')
 	->notPath('l10n')
 	->notPath('src')
+	->notPath('node_modules')
 	->notPath('vendor')
 	->in(__DIR__);
 return $config;
