Only run psalm on stable/master branches
Signed-off-by: Julius Härtl <jus@bitgrid.net>

--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -1,6 +1,11 @@
 name: Static analysis
 
-on: [push, pull_request]
+on:
+  pull_request:
+  push:
+    branches:
+      - master
+      - stable*
 
 jobs:
   static-psalm-analysis:
