--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,7 +22,8 @@ jobs:
         npm ci
     - name: build
       env:
-        RELATIVE_CI_KEY: nextcloud/deck
+        RELATIVE_CI_KEY: ${{ secrets.RELATIVE_CI_KEY }}
+        RELATIVE_CI_SLUG: nextcloud/deck
       run: |
         mkdir -p js
         npm run build --if-present -- --profile --json | tail -n +6 > js/webpack-stats.json
