--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
     "name": "nextcloud/deck",
     "type": "project",
     "license": "AGPLv3",
-    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Julius Härtl",
@@ -14,7 +13,7 @@
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
-        "christophwurst/nextcloud": "dev-master",
+        "christophwurst/nextcloud": "^21@dev",
         "phpunit/phpunit": "^8",
         "nextcloud/coding-standard": "^0.5.0",
         "symfony/event-dispatcher": "^4.0",
