--- a/tests/integration/config/behat.yml
+++ b/tests/integration/config/behat.yml
@@ -5,10 +5,7 @@ default:
         - '%paths.base%/../features/'
       contexts:
         - ServerContext:
-            baseUrl:  http://localhost:8080/index.php/ocs/
-            admin:
-              - admin
-              - admin
-            regular_user_password: 123456
-        - BoardContext:
             baseUrl:  http://localhost:8080/
+        - RequestContext
+        - BoardContext
+        - SearchContext
