--- a/.github/workflows/app-code-check.yml
+++ b/.github/workflows/app-code-check.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         php-versions: ['7.4']
-        server-versions: ['master', 'stable18', 'stable19', 'stable20']
+        server-versions: ['master']
 
     name: AppCode check php${{ matrix.php-versions }}-${{ matrix.server-versions }}
     steps:
