--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -47,12 +47,12 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [12.x, 14.x]
 
     steps:
       - uses: actions/checkout@v2
       - name: Use node ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies
@@ -72,7 +72,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set up node ${{ matrix.node-versions }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-versions: ${{ matrix.node-versions }}
 
