--- a/package.json
+++ b/package.json
@@ -95,9 +95,9 @@
 		"jest": "^26.6.3",
 		"jest-serializer-vue": "^2.0.2",
 		"minimist": "^1.2.5",
-		"node-sass": "^4.14.1",
 		"raw-loader": "^4.0.2",
-		"sass-loader": "^10.1.1",
+		"sass": "^1.32.11",
+		"sass-loader": "^8.0.2",
 		"style-loader": "^1.3.0",
 		"stylelint": "^13.12.0",
 		"stylelint-config-recommended": "^4.0.0",
