--- a/.github/workflows/appbuild.yml
+++ b/.github/workflows/appbuild.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [14.x]
 
     steps:
     - uses: actions/checkout@v1
@@ -17,6 +17,8 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - name: Set up npm7
+      run: npm i -g npm@7
     - name: Setup PHP
       uses: shivammathur/setup-php@v1
       with:
