--- a/package.json
+++ b/package.json
@@ -68,54 +68,16 @@
 		"node": ">=10.0.0"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.14.3",
-		"@babel/eslint-parser": "^7.14.4",
-		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
-		"@babel/preset-env": "^7.14.4",
 		"@nextcloud/babel-config": "^1.0.0-beta.1",
 		"@nextcloud/browserslist-config": "^2.1.0",
 		"@nextcloud/eslint-config": "^5.1.0",
-		"@nextcloud/eslint-plugin": "^2.0.0",
+		"@nextcloud/stylelint-config": "^1.0.0-beta.0",
 		"@nextcloud/webpack-vue-config": "^4.0.3",
 		"@relative-ci/agent": "^2.0.0",
 		"@vue/test-utils": "^1.2.0",
-		"acorn": "^8.3.0",
-		"babel-eslint": "^10.1.0",
-		"babel-jest": "^27.0.2",
-		"babel-loader": "^8.2.2",
-		"css-loader": "^4.3.0",
-		"eslint": "^7.28.0",
-		"eslint-config-standard": "^16.0.3",
-		"eslint-friendly-formatter": "^4.0.1",
-		"eslint-loader": "^4.0.2",
-		"eslint-plugin-import": "^2.23.4",
-		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-promise": "^4.3.1",
-		"eslint-plugin-standard": "^5.0.0",
-		"eslint-plugin-vue": "^7.10.0",
-		"eslint-webpack-plugin": "^2.5.4",
-		"file-loader": "^6.2.0",
 		"jest": "^27.0.4",
 		"jest-serializer-vue": "^2.0.2",
-		"minimist": "^1.2.5",
-		"node-polyfill-webpack-plugin": "^1.1.2",
-		"raw-loader": "^4.0.2",
-		"sass": "^1.34.1",
-		"sass-loader": "^10.1.1",
-		"style-loader": "^2.0.0",
-		"stylelint": "^13.13.1",
-		"stylelint-config-recommended": "^5.0.0",
-		"stylelint-config-recommended-scss": "^4.2.0",
-		"stylelint-scss": "^3.19.0",
-		"stylelint-webpack-plugin": "^2.1.1",
-		"url-loader": "^4.1.1",
-		"vue-jest": "^3.0.7",
-		"vue-loader": "^15.9.7",
-		"vue-template-compiler": "^2.6.14",
-		"webpack": "^5.38.1",
-		"webpack-cli": "^4.7.2",
-		"webpack-dev-server": "^3.11.2",
-		"webpack-merge": "^5.8.0"
+		"vue-jest": "^3.0.7"
 	},
 	"jest": {
 		"moduleFileExtensions": [
