Add new command
Clean code
Add new command
Import last modified and deleted date
Replace arrow functions by lambda functions
Add properties to class
Add dependency to composer.json
Signed-off-by: Vitor Mattos <vitor@php.rio>
Turn private methods
Add output messages and associate users to cards

Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		}
 	],
 	"require": {
-		"cogpowered/finediff": "0.3.*"
+		"cogpowered/finediff": "0.3.*",
+		"justinrainbow/json-schema": "^5.2"
 	},
 	"require-dev": {
 		"roave/security-advisories": "dev-master",
