--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
 		"phpunit/phpunit": "^9",
 		"nextcloud/coding-standard": "^0.5.0",
 		"symfony/event-dispatcher": "^4.0",
-		"vimeo/psalm": "^4.3",
-		"php-parallel-lint/php-parallel-lint": "^1.2"
+		"php-parallel-lint/php-parallel-lint": "^1.2",
+		"psalm/phar": "^4.12"
 	},
 	"config": {
 		"optimize-autoloader": true,
