--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "deck",
 	"description": "",
-	"version": "1.6.0-beta3",
+	"version": "1.6.0",
 	"authors": [
 		{
 			"name": "Julius Härtl",
