--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -84,5 +84,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install dependencies
+        run: npm ls -a
+
       - name: Lint
         run: npm run stylelint
