--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
 		"dompurify": "^2.3.3",
 		"lodash": "^4.17.21",
 		"markdown-it": "^12.2.0",
-		"markdown-it-task-lists": "^2.1.1",
 		"markdown-it-link-attributes": "^3.0.0",
+		"markdown-it-task-checkbox": "^1.0.6",
 		"moment": "^2.29.1",
 		"nextcloud-vue-collections": "^0.9.0",
 		"p-queue": "^6.6.2",
