Limit php tests to certain fails on pull requests
Signed-off-by: Julius Härtl <jus@bitgrid.net>

--- a/.github/workflows/appbuild.yml
+++ b/.github/workflows/appbuild.yml
@@ -1,7 +1,11 @@
 name: Package build
 
 on:
-  pull_request:
+  push:
+    branches:
+      - main
+      - master
+      - stable*
 
 jobs:
   build:
