--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nextcloud/initial-state": "^2.0.0",
     "@nextcloud/l10n": "^1.6.0",
     "@nextcloud/moment": "^1.2.1",
+		"@nextcloud/notify_push": "^1.1.2",
     "@nextcloud/router": "^2.0.1",
     "@nextcloud/vue": "^7.3.0",
     "@nextcloud/vue-dashboard": "^2.0.1",
