--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@nextcloud/l10n": "^1.6.0",
     "@nextcloud/moment": "^1.2.1",
     "@nextcloud/router": "^2.0.0",
-    "@nextcloud/vue": "^5.4.0",
+    "@nextcloud/vue": "^6.0.0-beta.3",
     "@nextcloud/vue-dashboard": "^2.0.1",
     "blueimp-md5": "^2.19.0",
     "dompurify": "^2.3.10",
