--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@nextcloud/router": "^2.0.0",
     "@nextcloud/vue": "^6.0.0-beta.4",
     "@nextcloud/vue-dashboard": "^2.0.1",
+    "@nextcloud/vue-richtext": "^2.0.0",
     "blueimp-md5": "^2.19.0",
     "dompurify": "^2.4.0",
     "lodash": "^4.17.21",
@@ -79,8 +80,10 @@
     "@relative-ci/agent": "^4.1.0",
     "@vue/test-utils": "^1.3.0",
     "cypress": "^10.7.0",
+    "eslint-webpack-plugin": "^3.2.0",
     "jest": "^29.0.1",
     "jest-serializer-vue": "^2.0.2",
+    "stylelint-webpack-plugin": "^3.3.0",
     "vue-jest": "^3.0.7",
     "vue-template-compiler": "^2.7.9"
   },
