Migrate to nextcloud/OCP package in master
Signed-off-by: Joas Schilling <coding@schilljs.com>

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -77,7 +77,7 @@ jobs:
           php occ app:enable deck
           php occ app:list
           cd apps/deck
-          composer install
+          composer install --no-dev
           npm ci
           npm run build
           cd ../../
