--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,12 @@
 	},
 	"require-dev": {
 		"roave/security-advisories": "dev-master",
-		"christophwurst/nextcloud": "dev-master",
 		"phpunit/phpunit": "^9",
 		"nextcloud/coding-standard": "^1.0.0",
 		"symfony/event-dispatcher": "^4.0",
 		"vimeo/psalm": "^4.3",
-		"php-parallel-lint/php-parallel-lint": "^1.2"
+		"php-parallel-lint/php-parallel-lint": "^1.2",
+		"nextcloud/ocp": "dev-stable24"
 	},
 	"config": {
 		"optimize-autoloader": true,
@@ -43,5 +43,10 @@
 		],
 		"test:unit": "phpunit -c tests/phpunit.xml",
 		"test:integration": "phpunit -c tests/phpunit.integration.xml && cd tests/integration && ./run.sh"
+	},
+	"autoload-dev": {
+		"psr-4": {
+			"OCP\\": "vendor/nextcloud/ocp/OCP"
+		}
 	}
 }
