--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
 		"nextcloud/coding-standard": "^1.0.0",
 		"symfony/event-dispatcher": "^4.0",
 		"vimeo/psalm": "^4.3",
-		"php-parallel-lint/php-parallel-lint": "^1.2"
+		"php-parallel-lint/php-parallel-lint": "^1.2",
+		"nextcloud/ocp": "dev-stable25"
 	},
 	"config": {
 		"optimize-autoloader": true,
