Add integration test for attachment handling on cards
Signed-off-by: Julius Härtl <jus@bitgrid.net>

--- a/tests/integration/config/behat.yml
+++ b/tests/integration/config/behat.yml
@@ -9,4 +9,5 @@ default:
         - RequestContext
         - BoardContext
         - CommentContext
+        - AttachmentContext
         - SearchContext
