--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "watch": "NODE_ENV=development webpack --progress --watch --config webpack.js",
     "lint": "eslint --ext .js,.vue src",
     "lint:fix": "eslint --ext .js,.vue src --fix",
+		"lint:cypress": "eslint --ext .js cypress",
     "stylelint": "stylelint src",
     "stylelint:fix": "stylelint src --fix",
     "test": "jest",
@@ -79,6 +80,7 @@
     "@relative-ci/agent": "^4.1.3",
     "@vue/test-utils": "^1.3.3",
     "cypress": "^12.2.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-webpack-plugin": "^3.2.0",
     "jest": "^29.3.1",
     "jest-serializer-vue": "^3.1.0",
