add cypress auto generated videos to gitignore
Signed-off-by: Simon Hötten <s+git@hoetten.org>

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ js/
 build/
 css/style.css
 css/vendor.css
+cypress/videos/
 tests/integration/vendor/
 tests/integration/composer.lock
 tests/.phpunit.result.cache
