--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 		"@nextcloud/l10n": "^1.6.0",
 		"@nextcloud/moment": "^1.2.1",
 		"@nextcloud/router": "^2.0.0",
-		"@nextcloud/vue": "^7.0.0-beta.4",
+		"@nextcloud/vue": "^7.3.0",
 		"@nextcloud/vue-dashboard": "^2.0.1",
 		"@nextcloud/vue-richtext": "^2.0.1",
 		"blueimp-md5": "^2.19.0",
