--- a/.github/workflows/appbuild.yml
+++ b/.github/workflows/appbuild.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
@@ -30,8 +30,8 @@ jobs:
         tools: composer
     - name: install dependencies
       run: |
-        wget https://github.com/ChristophWurst/krankerl/releases/download/v0.12.2/krankerl_0.12.2_amd64.deb
-        sudo dpkg -i krankerl_0.12.2_amd64.deb
+        wget https://github.com/ChristophWurst/krankerl/releases/download/v0.14.0/krankerl_0.14.0_amd64.deb
+        sudo dpkg -i krankerl_0.14.0_amd64.deb
     - name: package
       run: |
         uname -a
