--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@nextcloud/initial-state": "^2.0.0",
     "@nextcloud/l10n": "^2.0.0",
     "@nextcloud/moment": "^1.2.1",
-		"@nextcloud/notify_push": "^1.1.3",
+    "@nextcloud/notify_push": "^1.1.3",
     "@nextcloud/router": "^2.0.1",
     "@nextcloud/vue": "^7.4.0",
     "@nextcloud/vue-dashboard": "^2.0.1",
@@ -81,13 +81,13 @@
     "@nextcloud/webpack-vue-config": "^5.4.0",
     "@relative-ci/agent": "^4.1.3",
     "@vue/test-utils": "^1.3.3",
+    "@vue/vue2-jest": "^29.2.2",
     "cypress": "^12.3.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-webpack-plugin": "^3.2.0",
     "jest": "^29.3.1",
     "jest-serializer-vue": "^3.1.0",
     "stylelint-webpack-plugin": "^3.3.0",
-    "vue-jest": "^4.0.1",
     "vue-template-compiler": "^2.7.14"
   },
   "jest": {
