--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "deck",
   "description": "",
-  "version": "1.9.0-beta.1",
+  "version": "1.10.0-dev",
   "authors": [
     {
       "name": "Julius Härtl",
