--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
 		"symfony/event-dispatcher": "^4.0",
 		"vimeo/psalm": "^5.4",
 		"php-parallel-lint/php-parallel-lint": "^1.2",
-		"nextcloud/ocp": "dev-master"
+		"nextcloud/ocp": "dev-stable26"
 	},
 	"config": {
 		"optimize-autoloader": true,
