--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,6 +13,40 @@ updates:
   - juliushaertl
 
 - package-ecosystem: npm
+  target-branch: stable27
+  versioning-strategy: lockfile-only
+  directory: "/"
+  schedule:
+    interval: weekly
+    day: saturday
+    time: "03:00"
+    timezone: Europe/Paris
+  ignore:
+    - dependency-name: "*"
+      update-types: ["version-update:semver-major"]
+  open-pull-requests-limit: 30
+  labels:
+  - 3. to review
+  - dependencies
+
+- package-ecosystem: npm
+  target-branch: stable26
+  versioning-strategy: lockfile-only
+  directory: "/"
+  schedule:
+    interval: weekly
+    day: saturday
+    time: "03:00"
+    timezone: Europe/Paris
+  ignore:
+    - dependency-name: "*"
+      update-types: ["version-update:semver-major"]
+  open-pull-requests-limit: 30
+  labels:
+  - 3. to review
+  - dependencies
+
+- package-ecosystem: npm
   target-branch: stable25
   versioning-strategy: lockfile-only
   directory: "/"
