--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -98,7 +98,7 @@ jobs:
           cat config/config.php
           ./occ user:list
           ./occ app:enable --force ${{ env.APP_NAME }}
-          ./occ config:system:set query_log_file --value '$PWD/${{ env.APP_NAME }}/${{ env.APP_NAME }}/query.log'
+          ./occ config:system:set query_log_file --value "$PWD/query.log"
           php -S localhost:8080 &
 
       - name: Run behat
@@ -123,12 +123,12 @@ jobs:
                 myError += data.toString()
               }
             }
-            await exec.exec(`/bin/bash -c "cat ${{ env.APP_NAME }}/${{ env.APP_NAME }}/query.log | wc -l"`, [], options)
+            await exec.exec(`/bin/bash -c "cat query.log | wc -l"`, [], options)
             msg = myOutput
             const queryCount = parseInt(myOutput, 10)
 
             myOutput = ''
-            await exec.exec('cat', ['${{ env.APP_NAME }}/${{ env.APP_NAME }}/apps/${{ env.APP_NAME }}/tests/integration/base-query-count.txt'], options)
+            await exec.exec('cat', ['apps/${{ env.APP_NAME }}/tests/integration/base-query-count.txt'], options)
             const baseCount = parseInt(myOutput, 10)
 
             const absoluteIncrease = queryCount - baseCount
