--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,3 +16,6 @@ nav:
         - Import documentation:
             - Implement import: implement-import.md
             - Class diagram: import-class-diagram.md
+markdown_extensions:
+  - toc:
+      permalink: "#"
