docs: (opinionated) better visual separation between endpoints
Signed-off-by: Viktor Diezel <viktor.diezel@posteo.de>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,5 +17,6 @@ nav:
             - Implement import: implement-import.md
             - Class diagram: import-class-diagram.md
 markdown_extensions:
+  - attr_list
   - toc:
       permalink: "#"
