feat(deps): Add Nextcloud 34 support on main
Signed-off-by: Joas Schilling <coding@schilljs.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,29 @@ updates:
     time: "03:00"
     timezone: Europe/Paris
   open-pull-requests-limit: 10
+  labels:
+  - 3. to review
+  - dependencies
+  reviewers:
+  - juliushaertl
+  - luka-nextcloud
+
+- package-ecosystem: npm
+  target-branch: stable33
+  versioning-strategy: lockfile-only
+  directory: "/"
+  schedule:
+    interval: weekly
+    day: saturday
+    time: "03:15"
+    timezone: Europe/Paris
+  ignore:
+    - dependency-name: "*"
+      update-types: ["version-update:semver-major"]
+  open-pull-requests-limit: 30
+  labels:
+  - 3. to review
+  - dependencies
   reviewers:
   - juliushaertl
   - luka-nextcloud
@@ -29,6 +52,9 @@ updates:
   labels:
   - 3. to review
   - dependencies
+  reviewers:
+  - juliushaertl
+  - luka-nextcloud
 
 - package-ecosystem: npm
   target-branch: stable31
@@ -46,23 +72,9 @@ updates:
   labels:
   - 3. to review
   - dependencies
-
-- package-ecosystem: npm
-  target-branch: stable30
-  versioning-strategy: lockfile-only
-  directory: "/"
-  schedule:
-    interval: weekly
-    day: saturday
-    time: "03:30"
-    timezone: Europe/Paris
-  ignore:
-    - dependency-name: "*"
-      update-types: ["version-update:semver-major"]
-  open-pull-requests-limit: 30
-  labels:
-  - 3. to review
-  - dependencies
+  reviewers:
+  - juliushaertl
+  - luka-nextcloud
 
 - package-ecosystem: composer
   directory: "/"
