ci: use ubuntu-latest for fork pull-request workflows
Signed-off-by: Jaggob <37583151+Jaggob@users.noreply.github.com>

--- a/.github/workflows/cypress-e2e.yml
+++ b/.github/workflows/cypress-e2e.yml
@@ -142,7 +142,7 @@ jobs:
           retention-days: 5
 
   summary:
-      runs-on: ubuntu-latest-low
+      runs-on: ubuntu-latest
       needs: [ cypress ]
 
       if: always()
